rm github buttons

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,10 +37,10 @@ header:
       text: ""
       # Logo filename in `assets/media/` folder
       filename: "logo.png"
-    button:
-      enable: true
-      text: "Get Started"
-      url: "https://hugoblox.com/templates/"
+    #button:
+    #  enable: true
+    #  text: "Get Started"
+    #  url: "https://hugoblox.com/templates/"
     show_search: true
     show_theme_chooser: true
 
