--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -5,7 +5,7 @@ theme: "theme-landing-page"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Creator's Landing Page | Hugo Theme # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://probaverse.com/' # Website URL
 
 ############################
 ## PAGE OPTIONS
