--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,9 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo landing page theme powered by Hugo Blox website builder.'
+    description: |-
+      The probaverse is a suite of tools in R for exploring the full space of possible outcomes in an analysis. 
+      It elevates probability distributions as tangible objects that realistically represent your system.'
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: 'G-P0PB2NJ6NW'
@@ -47,7 +49,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} My Company'
+    notice: '© {year} Probaverse'
 
 # Localization
 locale:
